@@ -1,7 +1,8 @@
 // Copyright Vespa.ai. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.search.grouping.request;
 
-import java.util.Arrays;
+
+import java.util.List;
 
 /**
  * This class represents a fixed-width bucket-function in a {@link GroupingExpression}. It maps the input into the given
@@ -23,7 +24,7 @@ public class FixedWidthFunction extends FunctionNode {
     }
 
     private FixedWidthFunction(String label, Integer level, GroupingExpression exp, ConstantValue width) {
-        super("fixedwidth", label, level, Arrays.asList(exp, width));
+        super("fixedwidth", label, level, List.of(exp, width));
     }
 
     @Override
