@@ -1,7 +1,7 @@
 // Copyright Vespa.ai. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.search.grouping.request;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * Represents the math.floor(expression) function
@@ -21,7 +21,7 @@ public class MathFloorFunction extends FunctionNode {
     }
 
     private MathFloorFunction(String label, Integer level, GroupingExpression exp) {
-        super("math.floor", label, level, Arrays.asList(exp));
+        super("math.floor", label, level, List.of(exp));
     }
 
     @Override
